[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/fish_school.gd" type="Script" id=1]

[sub_resource type="CapsuleShape2D" id=1]
radius = 24.0
height = 48.0002

[sub_resource type="CircleShape2D" id=2]
radius = 64.1249

[node name="fish_school" type="Node2D"]
script = ExtResource( 1 )

[node name="school_zone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="school_zone"]
rotation = 1.5708
shape = SubResource( 1 )

[node name="keep_away" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="keep_away"]
modulate = Color( 0, 0, 0, 1 )
shape = SubResource( 2 )
